--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-calendar-heatmap": "^1.10.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
@@ -68,6 +69,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-calendar-heatmap": "^1.9.0",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
