--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.19.1",
+    "import-in-the-middle": "1.15.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.518.0",
     "next": "15.3.4",
@@ -60,6 +61,7 @@
     "react-hook-form": "^7.58.1",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^2.15.3",
+    "require-in-the-middle": "7.5.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
