--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "import-in-the-middle": "1.15.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.518.0",
-    "next": "16.0.4",
+    "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-calendar-heatmap": "^1.10.0",
@@ -73,6 +73,7 @@
     "@types/react": "19.2.7",
     "@types/react-calendar-heatmap": "^1.9.0",
     "@types/react-dom": "19.2.3",
+    "baseline-browser-mapping": "^2.9.19",
     "eslint": "^9.39.2",
     "eslint-config-next": "16.0.4",
     "tailwindcss": "^4.2.0",
